; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_append_string.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_append_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64*, i64*)* @append_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_string(i64* %0, i64* %1, i64* %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load i64*, i64** %4, align 8
  store i64* %8, i64** %7, align 8
  %9 = load i64*, i64** %6, align 8
  %10 = icmp ne i64* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  br label %34

12:                                               ; preds = %3
  %13 = load i64*, i64** %4, align 8
  %14 = load i64*, i64** %5, align 8
  %15 = call i32 @strcatW(i64* %13, i64* %14)
  %16 = load i64*, i64** %7, align 8
  %17 = call i32 @strlenW(i64* %16)
  %18 = load i64*, i64** %7, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i64, i64* %18, i64 %19
  store i64* %20, i64** %7, align 8
  %21 = load i64*, i64** %7, align 8
  %22 = getelementptr inbounds i64, i64* %21, i32 1
  store i64* %22, i64** %7, align 8
  store i64 34, i64* %21, align 8
  %23 = load i64*, i64** %7, align 8
  %24 = load i64*, i64** %6, align 8
  %25 = call i32 @strcpyW(i64* %23, i64* %24)
  %26 = load i64*, i64** %7, align 8
  %27 = call i32 @strlenW(i64* %26)
  %28 = load i64*, i64** %7, align 8
  %29 = sext i32 %27 to i64
  %30 = getelementptr inbounds i64, i64* %28, i64 %29
  store i64* %30, i64** %7, align 8
  %31 = load i64*, i64** %7, align 8
  %32 = getelementptr inbounds i64, i64* %31, i32 1
  store i64* %32, i64** %7, align 8
  store i64 34, i64* %31, align 8
  %33 = load i64*, i64** %7, align 8
  store i64 0, i64* %33, align 8
  br label %34

34:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @strcatW(i64*, i64*) #1

declare dso_local i32 @strlenW(i64*) #1

declare dso_local i32 @strcpyW(i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
